Improved some internal typedef namings, added documentation skeleton.

--- a/doc/manual/license.tex
+++ b/doc/manual/license.tex
@@ -1,3 +1,6 @@
+
+\chapter*{License}  \addcontentsline{toc}{chapter}{License}
+
 Copyright (c) 2011, Institute for Microelectronics and Institute for Analysis and Scientific Computing, TU Wien
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
