Added introduction to manual, renamed result_of::{point_type | ncell_type} to result_of::{point | ncell}

--- a/doc/manual/contributors.tex
+++ b/doc/manual/contributors.tex
@@ -6,19 +6,22 @@ Copyright {\copyright} 2011 & Institute for Microelectronics, \\
                             & Institute for Analysis and Scientific Computing, TU Wien.
 \end{tabular}
 
-\vspace{6cm}
+\vspace{4cm}
 
-Contributors:\\ 
+\textit{Main authors:}\\ 
 
 Karl Rupp (Project Head)\\
 Josef Weinbub \\
 
-%\vspace{3.5cm}
+\vspace{1cm}
 
+\textit{Contributors:}\\ 
+
+Peter Lagger
 
 
 %\vspace{7.0cm}
-\vspace{5.0cm}
+\vspace{4.0cm}
 
 Institute for Microelectronics\newline
 Vienna University of Technology\newline
