--- a/doc/manual/viennagrid.bib
+++ b/doc/manual/viennagrid.bib
@@ -4,6 +4,46 @@
    URL = {http://viennadata.sourceforge.net/}
 }
 % -----------------------------------------------
+@misc{GrAL,
+   title = {{GrAL - Grid Algorithms Library}},
+   URL = {http://gral.berlios.de/}
+}
+% -----------------------------------------------
+@misc{CGAL,
+   title = {{CGAL - Computational Geometry Algorithms Library}},
+   URL = {http://www.cgal.org/}
+}
+% -----------------------------------------------
+@misc{DUNE,
+   title = {{DUNE - Distributed and Unified Numerics Environment}},
+   URL = {http://www.dune-project.org/}
+}
+% -----------------------------------------------
+@misc{libmesh,
+   title = {{libmesh}},
+   URL = {http://libmesh.sourceforge.net/}
+}
+% -----------------------------------------------
+@misc{trimesh,
+   title = {{trimesh}},
+   URL = {http://gfx.cs.princeton.edu/proj/trimesh2/}
+}
+% -----------------------------------------------
+@misc{VCGlib,
+   title = {{VCGlib}},
+   URL = {http://vcg.sourceforge.net/}
+}
+% -----------------------------------------------
+@misc{OpenMesh,
+   title = {{OpenMesh}},
+   URL = {http://www.openmesh.org/}
+}
+% -----------------------------------------------
+@misc{trimesh2,
+   title = {{trimesh2}},
+   URL = {http://gfx.cs.princeton.edu/proj/trimesh2/}
+}
+% -----------------------------------------------
 @misc{boost,
    title = {{Boost C++ Libraries}},
    URL = {http://www.boost.org/}
