--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -83,6 +83,7 @@
 \pagenumbering{arabic}
 \include{introduction}
 \include{installation}
+\include{domainconfig}
 \include{domainsetup}
 \include{iterators}
 \include{refinement}
