--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -86,6 +86,7 @@
 \include{domainconfig}
 \include{domainsetup}
 \include{iterators}
+\include{algorithms}
 \include{refinement}
 \include{benchmarks}
 \include{internals}
