--- a/doc/manual/refinement.tex
+++ b/doc/manual/refinement.tex
@@ -1,2 +1,20 @@
-\chapter{Refinement} \label{chap:refinement}
+\chapter{Main Entities of ViennaGrid} \label{chap:entities}
+In the following, the main entities of ViennaGrid are explained. 
 
+\begin{figure}[tb]
+ \includegraphics{figures/entities.eps}
+ \caption{Overview of the main entities in \ViennaGrid.}
+ \label{fig:entities}
+\end{figure}
+
+
+\section{Point}
+
+
+\section{Elements}
+
+
+\section{Segment}
+
+
+\section{Domain}
