--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -64,6 +64,9 @@
 \newcommand{\GCC} {\texttt{GCC}}
 \newcommand{\NVIDIA} { {NVIDIA} }
 
+\renewcommand{\matrix}[1]{\boldsymbol{#1}}
+\renewcommand{\vector}[1]{\boldsymbol{#1}}
+
 \include{keywords} % [KR] This is a mess, we should delete unused Minimos-stuff
 \include{setup}
 
@@ -83,11 +86,12 @@
 \pagenumbering{arabic}
 \include{introduction}
 \include{installation}
+\include{entities}
 \include{domainconfig}
 \include{domainsetup}
 \include{iterators}
 \include{algorithms}
-\include{refinement}
+\include{io}
 \include{benchmarks}
 \include{internals}
 \include{design-decisions}
