--- a/doc/manual/entities.tex
+++ b/doc/manual/entities.tex
@@ -69,7 +69,7 @@ Since all coordinate systems refer to a common underlying Euclidian space, the o
 For additional algorithms acting on points, e.g.~\lstinline|norm()| for computing the norm/length of a vector, please refer to Chapter \ref{chap:algorithms}.
 
 
-\TIP{ViennaGrid is not restricted to one, two or three dimensions! Cartesian coordinate systems for arbitrary dimensions are available.}
+\TIP{ViennaGrid is not restricted to one, two or three geometric dimensions! Cartesian coordinate systems for arbitrary dimensions are available.}
 
 \section{Elements (Topological Objects)}
 While the point type defines the underlying geometry, elements define the topological connections among distinguished points. Each of these distinguished points is called a \emph{vertex} and describes the corners or intersection of geometric shapes. Vertices are often also referred to as the \emph{nodes} of a mesh.
