--- a/doc/manual/viennagrid.bib
+++ b/doc/manual/viennagrid.bib
@@ -78,6 +78,20 @@
    title = {{MacPorts}},
    URL = {http://www.macports.org/}
 }
+% -----------------------------------------------
+@misc{arprec,
+   title = {{ARPREC high-precision library}},
+   URL = {http://crd.lbl.gov/~dhbailey/mpdist/}
+}
+
+
+
+
+
+
+
+
+
 
 @book{Austern:GenericProgrammingSTL,
  author = {M. H. Austern},
