--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -67,6 +67,9 @@
 \renewcommand{\matrix}[1]{\boldsymbol{#1}}
 \renewcommand{\vector}[1]{\boldsymbol{#1}}
 
+\renewcommand{\arraystretch}{1.2}
+
+
 \include{keywords} % [KR] This is a mess, we should delete unused Minimos-stuff
 \include{setup}
 
